# bigo

./: CMakeLists.txt  Makefile  README.md
data/: algorithms.json
src/: main.cpp
